instrumentation tests added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="submit">Submit</string>
     <string name="Error">Error</string>
     <string name="Complete">Complete</string>
+    <string name="Cancel">Cancel</string>
     <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
     <string name="IntegerProgressSample">Integer Progress Sample</string>
     <string name="StateChangeSample">State Change Sample</string>
     <string name="ProgressPaddingSample">Progress Padding Sample</string>
     <string name="CustomSelectorSample">Custom Selector Sample</string>
+    <string name="doProgress">DoProgress</string>
 
     <array name="sample_list">
         <item>@string/IndeterminateProgressSample</item>
